refactor of controllers and test